Implement password encryption and handle login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 busher.openapi.dev-url=http://localhost:8080
 busher.openapi.prod-url=https://busher-api.com
+
+encryption.salt.rounds=10
+
+jwt.algorithm.key=SuperSecureSecretKey
+jwt.issuer=Artsoft
+jwt.expiryInSeconds=604800
