Add product and order endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-bean-definition-overriding=false
+
+spring.jpa.hibernate.ddl-auto=create-drop
 
 busher.openapi.dev-url=http://localhost:8080
 busher.openapi.prod-url=https://busher-api.com
