Add initial email verification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ encryption.salt.rounds=10
 jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=Artsoft
 jwt.expiryInSeconds=604800
+
+email.from=no-reply@artsoft.com
+
+app.frontend.url=http://artsoft.com
