Develop email verification, update README, permit additional endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,8 @@ jwt.expiryInSeconds=604800
 
 email.from=no-reply@artsoft.com
 
-app.frontend.url=http://artsoft.com
+#app.frontend.url=http://artsoft.com
+app.frontend.url=http://localhost:8080
+
+spring.mail.host=localhost
+spring.mail.port=2525
