--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 busher.openapi.dev-url=http://localhost:8080
 busher.openapi.prod-url=https://busher-api.com
 
-encryption.salt.rounds=10
+hashing.salt.rounds=10
 
 jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=Artsoft
