Specify default media type for openapi specs as application/json

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ app.frontend.url=http://localhost:8080
 
 spring.mail.host=localhost
 spring.mail.port=2525
+
+springdoc.default-produces-media-type=application/json
