Add env variables to properties and allow all origins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:postgres}
+spring.datasource.username=${DB_USERNAME:admin}
+spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.main.allow-bean-definition-overriding=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-busher.openapi.dev-url=http://localhost:8080
-busher.openapi.prod-url=https://busher-api.com
+busher.openapi.dev-url=${DEV_URL:http://localhost:8080}
+busher.openapi.prod-url=${PROD_URL:http://localhost:8080}
 
 hashing.salt.rounds=10
 
@@ -18,10 +18,10 @@ jwt.expiryInSeconds=604800
 
 email.from=no-reply@artsoft.com
 
-#app.frontend.url=http://artsoft.com
-app.frontend.url=http://localhost:8080
+#app.frontend.url=https://wolskimarcin.github.io/artsoft-frontend
+app.frontend.url=${FRONTEND_URL:http://localhost:4200}
 
-spring.mail.host=localhost
-spring.mail.port=2525
+spring.mail.host=${MAIL_HOST:localhost}
+spring.mail.port=${MAIL_PORT:2525}
 
 springdoc.default-produces-media-type=application/json
