Add smtp properties as env variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,10 @@ email.from=no-reply@artsoft.com
 app.frontend.url=${FRONTEND_URL:http://localhost:4200}
 
 spring.mail.host=${MAIL_HOST:localhost}
-spring.mail.port=${MAIL_PORT:2525}
+spring.mail.port=${MAIL_PORT:25}
+spring.mail.username=${SMTP_USERNAME:}
+spring.mail.password=${SMTP_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH:false}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS_ENABLE:false}
 
 springdoc.default-produces-media-type=application/json
